--- a/TP_Laba1/MainWindow.xaml
+++ b/TP_Laba1/MainWindow.xaml
@@ -19,9 +19,9 @@
             </RowDefinition>
             <RowDefinition Height="auto" MinHeight="9.6"></RowDefinition>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" Margin="15,15,15,4.6">
-            <Label Content="Количество элементов:" Margin="0,-5,-0.4,0" HorizontalAlignment="Left"/>
-            <TextBox x:Name="tBox_countElem" BorderBrush="Gray" SelectionBrush="Gray"/>
+        <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" Margin="15,20,15,4.6">
+            <Label Content="Количество элементов:" Margin="0,-5,-0.4,0" HorizontalAlignment="Left" Height="28"/>
+            <TextBox x:Name="tBox_countElem" BorderBrush="Gray" SelectionBrush="Gray" Margin="0,0,-0.4,0"/>
             <Button x:Name="btn_task1" Content="Расчет 1" Margin="0 15 0 0" Click="Btn_task1_Click" Width="120" HorizontalAlignment="Left"/>
             <Button x:Name="btn_task2" Content="Расчет 2" Margin="0 15 0 0" Click="Btn_task2_Click" Width="120" HorizontalAlignment="Left"/>
 
@@ -32,13 +32,22 @@
 
             <Button x:Name="btn_task6" Content="Расчет 6" Margin="0 15 0 0" Click="Btn_task6_Click" Width="120" HorizontalAlignment="Left"/>
             <Button x:Name="btn_task7" Content="Расчет 7" Margin="0 15 0 0" Click="Btn_task7_Click" Width="120" HorizontalAlignment="Left"/>
-
             <Button x:Name="btn_save" Content="Сохранить" Margin="0 15 0 0" Click="Btn_save_Click" Width="120" HorizontalAlignment="Left"/>
             <Button x:Name="btn_about" Content="About" Margin="0 15 0 0" Width="120" HorizontalAlignment="Left" Click="Btn_about_Click"/>
             <Button x:Name="btn_exit" Content="Выход"  Margin="0 15 0 0" VerticalAlignment="Bottom" Click="Btn_exit_Click" Width="120" HorizontalAlignment="Left"/>
         </StackPanel>
-        <TextBlock Grid.Column="1"  Text="Результат" Margin="0,0,-0.8,4.6"/>
-        <ListBox Grid.Column="1" Grid.Row="0" Margin="5,20,4.2,0" x:Name="lbMain"  Width="auto" MinWidth="305" MinHeight="295" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" VerticalContentAlignment="Stretch" Height="417" VerticalAlignment="Top" />
+        <TextBlock Grid.Column="1"  Text="Результат" Margin="0,20,-0.8,4.6"/>
+        <ListBox Grid.Column="1" Grid.Row="0" Margin="5,43,4.2,0" x:Name="lbMain"  Width="auto" MinWidth="305" MinHeight="295" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" VerticalContentAlignment="Stretch" Height="394" VerticalAlignment="Top" />
+        <CheckBox Content="CheckBox" Grid.Column="1" HorizontalAlignment="Left" Margin="584,15,-272.8,0" VerticalAlignment="Top" Width="100"/>
+        <Menu HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="580" Grid.ColumnSpan="2" Margin="0,0,-0.8,0">
+            <MenuItem Header="New" Width="105">
+                <MenuItem Header="Гистограмма" Click="Button_Click"/>
+                <MenuItem Header="Соседи" Click="MenuItem_Click"/>
+                <MenuItem Header="Математическое ожидание" Click="MenuItem_Click_1"/>
+            </MenuItem>
+
+
+        </Menu>
 
 
 
