--- a/TP_Laba1/MainWindow.xaml
+++ b/TP_Laba1/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:Properties="clr-namespace:TP_Laba1.Properties" x:Class="TP_Laba1.MainWindow"
         mc:Ignorable="d"
         Title="Лабораторная работа №1" Height="469" Width="588.8" SizeToContent="WidthAndHeight" MinWidth="588.8" MinHeight="489" MaxWidth="588.8" MaxHeight="489">
-    <Grid Margin="0,0,3.4,1.2">
+    <Grid Margin="0,10,3.4,1.2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition/>
@@ -20,8 +20,8 @@
             <RowDefinition Height="auto" MinHeight="9.6"></RowDefinition>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" Margin="15,15,15,4.6">
-            <Label Content="Количество элементов:" Margin="0,-5,-0.4,0" HorizontalAlignment="Left"/>
-            <TextBox x:Name="tBox_countElem" BorderBrush="Gray" SelectionBrush="Gray"/>
+            <Label Content="Количество элементов:" Margin="0,-5,-0.4,0" HorizontalAlignment="Left" Height="25"/>
+            <TextBox x:Name="tBox_countElem" BorderBrush="Gray" SelectionBrush="Gray" Height="20" Margin="0,0,-0.4,0"/>
             <Button x:Name="btn_task1" Content="Расчет 1" Margin="0 15 0 0" Click="Btn_task1_Click" Width="120" HorizontalAlignment="Left"/>
             <Button x:Name="btn_task2" Content="Расчет 2" Margin="0 15 0 0" Click="Btn_task2_Click" Width="120" HorizontalAlignment="Left"/>
 
@@ -39,6 +39,7 @@
         </StackPanel>
         <TextBlock Grid.Column="1"  Text="Результат" Margin="0,0,-0.8,4.6"/>
         <ListBox Grid.Column="1" Grid.Row="0" Margin="5,20,4.2,0" x:Name="lbMain"  Width="auto" MinWidth="305" MinHeight="295" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" VerticalContentAlignment="Stretch" Height="417" VerticalAlignment="Top" />
+        <Menu HorizontalAlignment="Left" Height="24" VerticalAlignment="Top" Width="580" Margin="0,-9,-0.8,0" Grid.ColumnSpan="2"/>
 
 
 
