--- a/TP_Laba1/MainWindow.xaml
+++ b/TP_Laba1/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:Properties="clr-namespace:TP_Laba1.Properties" x:Class="TP_Laba1.MainWindow"
         mc:Ignorable="d"
         Title="Лабораторная работа №1" Height="469" Width="588.8" SizeToContent="WidthAndHeight" MinWidth="588.8" MinHeight="489" MaxWidth="588.8" MaxHeight="489">
-    <Grid Margin="0,10,3.4,1.2">
+    <Grid Margin="0,0,3.4,1.2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition/>
@@ -19,7 +19,7 @@
             </RowDefinition>
             <RowDefinition Height="auto" MinHeight="9.6"></RowDefinition>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" Margin="15,15,15,4.6">
+        <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" Margin="10,29,15,4.6">
             <Label Content="Количество элементов:" Margin="0,-5,-0.4,0" HorizontalAlignment="Left" Height="25"/>
             <TextBox x:Name="tBox_countElem" BorderBrush="Gray" SelectionBrush="Gray" Height="20" Margin="0,0,-0.4,0"/>
             <Button x:Name="btn_task1" Content="Расчет 1" Margin="0 15 0 0" Click="Btn_task1_Click" Width="120" HorizontalAlignment="Left"/>
@@ -29,22 +29,22 @@
             <Button x:Name="btn_task3" Content="Расчет 3" Margin="0 15 0 0" Click="Btn_task3_Click" Width="120" HorizontalAlignment="Left"/>
             <Button x:Name="btn_task4" Content="Расчет 4" Margin="0 15 0 0" Click="Btn_task4_Click" Width="120" HorizontalAlignment="Left"/>
             <Button x:Name="btn_task5" Content="Расчет 5" Margin="0 15 0 0" Click="Btn_task5_Click" Width="120" HorizontalAlignment="Left"/>
-
             <Button x:Name="btn_task6" Content="Расчет 6" Margin="0 15 0 0" Click="Btn_task6_Click" Width="120" HorizontalAlignment="Left"/>
             <Button x:Name="btn_task7" Content="Расчет 7" Margin="0 15 0 0" Click="Btn_task7_Click" Width="120" HorizontalAlignment="Left"/>
-
             <Button x:Name="btn_save" Content="Сохранить" Margin="0 15 0 0" Click="Btn_save_Click" Width="120" HorizontalAlignment="Left"/>
             <Button x:Name="btn_about" Content="About" Margin="0 15 0 0" Width="120" HorizontalAlignment="Left" Click="Btn_about_Click"/>
             <Button x:Name="btn_exit" Content="Выход"  Margin="0 15 0 0" VerticalAlignment="Bottom" Click="Btn_exit_Click" Width="120" HorizontalAlignment="Left"/>
         </StackPanel>
-        <TextBlock Grid.Column="1"  Text="Результат" Margin="0,0,-0.8,4.6"/>
-        <ListBox Grid.Column="1" Grid.Row="0" Margin="5,20,4.2,0" x:Name="lbMain"  Width="auto" MinWidth="305" MinHeight="295" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" VerticalContentAlignment="Stretch" Height="417" VerticalAlignment="Top" />
-        <Menu HorizontalAlignment="Left" Height="24" VerticalAlignment="Top" Width="580" Margin="0,-9,-0.8,0" Grid.ColumnSpan="2"/>
-
-
-
-
-
+        <TextBlock Grid.Column="1"  Text="Результат" Margin="0,20,-0.8,4.6"/>
+        <ListBox Grid.Column="1" Grid.Row="0" Margin="5,43,4.2,0" x:Name="lbMain"  Width="auto" MinWidth="305" MinHeight="295" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" VerticalContentAlignment="Stretch" Height="394" VerticalAlignment="Top" />
+        <CheckBox Content="CheckBox" Grid.Column="1" HorizontalAlignment="Left" Margin="584,15,-272.8,0" VerticalAlignment="Top" Width="100"/>
+        <Menu HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="580" Grid.ColumnSpan="2" Margin="0,0,-0.8,0">
+            <MenuItem Header="New" Width="105">
+                <MenuItem Header="Гистограмма" Click="Button_Click"/>
+                <MenuItem Header="Соседи" Click="MenuItem_Click"/>
+                <MenuItem Header="Математическое ожидание" Click="MenuItem_Click_1"/>
+            </MenuItem>
+        </Menu>
 
     </Grid>
 </Window>
