--- a/TP_Laba1/MainWindow.xaml
+++ b/TP_Laba1/MainWindow.xaml
@@ -42,7 +42,11 @@
             <MenuItem Header="New" Width="105">
                 <MenuItem Header="Гистограмма" Click="Button_Click"/>
                 <MenuItem Header="Соседи" Click="MenuItem_Click"/>
+                <MenuItem Header="Последовательность" Click="MenuItem_Click_2"/>
+            </MenuItem>
+            <MenuItem Header="New2">
                 <MenuItem Header="Математическое ожидание" Click="MenuItem_Click_1"/>
+                
             </MenuItem>
         </Menu>
 
