--- a/TP_Laba1/MainWindow.xaml
+++ b/TP_Laba1/MainWindow.xaml
@@ -43,7 +43,8 @@
                 <MenuItem Header="Гистограмма" Click="Button_Click"/>
                 <MenuItem Header="Соседи" Click="MenuItem_Click"/>
                 <MenuItem Header="Последовательность" Click="MenuItem_Click_2"/>
-
+                <MenuItem Header="Последовательность 2" Click="MenuItem_Click_1"/>
+                <MenuItem Header="Последовательность 2*" Click="MenuItem_Click_3"/>
 
             </MenuItem>
         </Menu>
