--- a/TP_Laba1/MainWindow.xaml
+++ b/TP_Laba1/MainWindow.xaml
@@ -44,6 +44,10 @@
                 <MenuItem Header="Гистограмма" Click="Button_Click"/>
                 <MenuItem Header="Соседи" Click="MenuItem_Click"/>
                 <MenuItem Header="Математическое ожидание" Click="MenuItem_Click_1"/>
+                <MenuItem Header="Отклонение от Мо" Click="MenuItem_Click_2"/>
+                <MenuItem Header="Замена" Click="MenuItem_Click_3"/>
+
+
             </MenuItem>
         </Menu>
 
